Fixed flex zones being cut off in Pre-fare simulations - Seems like we were transforming the div around the widget instead of   the widget itself, leading to some cut off widgets. - Moves the transform into the widget itself rather than the surrounding   div - Adds some scaling logic for the solo/duo panels for simulations to   prevent unneeded horizontal scrolling

--- a/assets/css/v2/pre_fare/simulation.scss
+++ b/assets/css/v2/pre_fare/simulation.scss
@@ -22,8 +22,10 @@
   }
 
   .simulation {
-    transform: scale(17.92%);
-    transform-origin: top left;
+    & > * {
+      transform: scale(17.92%);
+      transform-origin: top left;
+    }
   }
 
   .simulation__full-page {
